--- a/give-classes.html
+++ b/give-classes.html
@@ -23,9 +23,9 @@
         <header class="page-header">
             <div class="top-bar-container">
                 <a href="/">
-                    <img src="/images/icons/back.svg" alt="voltar">
+                    <img src="./images/icons/back.svg" alt="voltar">
                 </a>
-                <img src="/images/logo.svg" alt="Proffy">
+                <img src="./images/logo.svg" alt="Proffy">
             </div>
 
             <div class="header-content">
