correção link index

--- a/study.html
+++ b/study.html
@@ -25,7 +25,7 @@
                 <a href="/">
                     <img src="./images/icons/back.svg" alt="voltar">
                 </a>
-                <img src="/images/logo.svg" alt="Proffy">
+                <img src="./images/logo.svg" alt="Proffy">
             </div>
 
             <div class="header-content">
