correcoes href pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="./images/icons/study.svg" alt="Estudar">
             Estudar
             </a>
-            <a class="give-classes" href="/give-classes.html">
+            <a class="give-classes" href="./give-classes.html">
                 <img src="./images/icons/give-classes.svg" alt="Dar aulas">
                 Dar Aulas
                 </a>
