--- a/study.html
+++ b/study.html
@@ -73,10 +73,10 @@
         <main>
             <article class="teacher-item">
                 <header>
-                    <img src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4"
-                        alt="Diego Fernandes">
+                    <img src="https://avatars2.githubusercontent.com/u/64975112?s=460&u=86012823c153746e3d667dc8791d9eca0fe4f31c&v=4"
+                        alt="Rafael Marinho">
                     <div>
-                        <strong>Diego Fernandes</strong>
+                        <strong>Rafael Marinho</strong>
                         <span>Química</span>
                     </div>
                 </header>
@@ -96,10 +96,10 @@
 
             <article class="teacher-item">
                 <header>
-                    <img src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4"
-                        alt="Diego Fernandes">
+                    <img src="https://avatars2.githubusercontent.com/u/64975112?s=460&u=86012823c153746e3d667dc8791d9eca0fe4f31c&v=4"
+                        alt="Rafael Marinho">
                     <div>
-                        <strong>Diego Fernandes</strong>
+                        <strong>Rafael Marinho</strong>
                         <span>Química</span>
                     </div>
                 </header>
