--- a/give-classes.html
+++ b/give-classes.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/partials/page-give-classes.css">
 
+    <script src="./scripts/addField.js" defer></script>
+
     <link
         href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
         rel="stylesheet">
@@ -84,7 +86,7 @@
                 </fieldset>
                 <fieldset id="schedule-items">
                     <legend>Horários disponíveis
-                        <button id="add-time">+ Novo Horário</button>
+                        <button type="button" id="add-time">+ Novo Horário</button>
                     </legend>
                         <div class="schedule-item">
                             <div class="select-block">
